# CellIDTrackerApp

./: .gitignore  EXPERIMENT_DATA_COLLECTION_PLAN.md  EXPERIMENT_DATA_SCHEMA.md  PROJECT_OVERVIEW.md  README.md  build.gradle.kts  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts
app/include/: encoder.h  util.h
app/native/: CMakeLists.txt
app/src/androidTest/java/com/example/cellidtracker/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/example/celltracker/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/cellidtracker/: AssetConfig.kt  CarrierProbe.kt  CellMapTimelineItem.kt  CellMapView.kt  DeviceProbe.kt  GoogleGeolocationClient.kt  ImsProbe.kt  MainActivity.kt  MainViewModel.kt  NativeBridge.kt  Perms.kt  ProbeForegroundService.kt  RootShell.kt
app/src/main/java/com/example/cellidtracker/data/: ExperimentDao.kt  ExperimentSampleEntity.kt  ExperimentSessionEntity.kt  HistoryDatabase.kt  ProbeHistoryDao.kt  ProbeHistoryEntity.kt  ProbeRunDao.kt  ProbeRunEntity.kt
app/src/main/java/com/example/cellidtracker/experiment/: ExperimentExport.kt
app/src/main/java/com/example/cellidtracker/geolocation/: GeolocationFusion.kt
app/src/main/java/com/example/cellidtracker/history/: HistoryExport.kt  ProbeHistory.kt
app/src/main/java/com/example/cellidtracker/probe/: ParsedCellFromLog.kt  ProbeAssets.kt  ProbeEventParser.kt  ProbeLogParser.kt  ProbeParseDeduper.kt
app/src/main/java/com/example/cellidtracker/ui/components/: SmallInfoChip.kt
app/src/main/java/com/example/cellidtracker/ui/tabs/: HistoryTab.kt  LogTab.kt  ProbeTab.kt
app/src/main/java/com/example/cellidtracker/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/example/celltracker/: MainActivity.kt
app/src/main/java/com/example/celltracker/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/cellidtracker/: ExampleUnitTest.kt
app/src/test/java/com/example/cellidtracker/experiment/: ExperimentExportTest.kt
app/src/test/java/com/example/cellidtracker/probe/: ProbeParseDeduperTest.kt
app/src/test/java/com/example/celltracker/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
scripts/: evaluate_geolocation_combinations.py
wifi-calling/: .gitignore  CMakeLists.txt  LICENSE  README.md  sync-config.sh  victim_list
wifi-calling/all/: CMakeLists.txt
wifi-calling/include/: application.h  iface.h  sadb.h  session.h  sip.h  util.h
wifi-calling/source/: application.cpp  encoder.cpp  session.cpp  sip.cpp  util.cpp
wifi-calling/standalone/: CMakeLists.txt
wifi-calling/standalone/source/: main.cpp
